# ua-parser-standalone

./: .gitignore  ua-parser.cabal
src/Web/: UAParser.hs
src/Web/UAParser/: Core.hs
test/: .ghci  ua-parser-test.cabal
test/resources/: firefox_user_agent_strings.yaml  test_user_agent_parser.yaml  test_user_agent_parser_os.yaml
test/src/: TestSuite.hs
